src/test/ui/variance/variance-unused-type-param.stderr
error[E0392]: parameter `A` is never used
  --> $DIR/variance-unused-type-param.rs:6:19
   |
LL | struct SomeStruct<A> { x: u32 }
   |                   ^ unused parameter
   |
   = help: consider removing `A` or using a marker such as `std::marker::PhantomData`

error[E0392]: parameter `A` is never used
  --> $DIR/variance-unused-type-param.rs:9:15
   |
LL | enum SomeEnum<A> { Nothing }
   |               ^ unused parameter
   |
   = help: consider removing `A` or using a marker such as `std::marker::PhantomData`

error[E0392]: parameter `T` is never used
  --> $DIR/variance-unused-type-param.rs:13:15
   |
LL | enum ListCell<T> {
   |               ^ unused parameter
   |
   = help: consider removing `T` or using a marker such as `std::marker::PhantomData`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0392`.
